fixing test
Signed-off-by: Amit Galitzky <amgalitz@amazon.com>